--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tixpal/common": "^1.0.6",
+    "@tixpal/common": "^1.0.11",
     "@types/body-parser": "^1.19.0",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
@@ -31,6 +31,7 @@
     "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.19",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1"
   },
