--- a/tickets/package.json
+++ b/tickets/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.19",
     "mongoose-update-if-current": "^1.4.0",
+    "node-nats-streaming": "^0.3.2",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1"
   },
