--- a/payments/package.json
+++ b/payments/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^5.10.19",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "react-stripe-checkout": "^2.6.3",
     "stripe": "^8.129.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1"
